# rk2

./: AbstractClass.h  CMakeLists.txt  ConcreteClassX.cpp  ConcreteClassX.h  ConcreteClassY.cpp  ConcreteClassY.h  main.cpp  test_method.cpp
.github/workflows/: ci.yml
