cmake_minimum_required(VERSION 3.10)
project(TemplateMethod CXX)
add_executable(demo main.cpp ConcreteClassX.cpp ConcreteClassY.cpp AbstractClass.cpp)
enable_testing()
add_test(NAME test COMMAND demo)
set_tests_properties(test PROPERTIES PASS_REGULAR_EXPRESSION "PrimitiveOperationA.*PrimitiveOperationB")
set(CPACK_GENERATOR "DEB")
set(CPACK_PACKAGE_NAME "template-method")
set(CPACK_DEBIAN_PACKAGE_MAINTAINER "User <user@example.com>")
include(CPack)
install(TARGETS demo DESTINATION bin)
